results/SVCOMP/conversational/log-WBS-2024_03_18_03_18_03.txt
public class WBS {

  private int WBS_Node_WBS_BSCU_SystemModeSelCmd_rlt_PRE;
  private int WBS_Node_WBS_BSCU_rlt_PRE1;
  private int WBS_Node_WBS_rlt_PRE2;

  public int Nor_Pressure;
  public int Alt_Pressure;
  public int Sys_Mode;

  //@ ensures WBS_Node_WBS_BSCU_SystemModeSelCmd_rlt_PRE == 0;
  //@ ensures WBS_Node_WBS_BSCU_rlt_PRE1 == 0;
  //@ ensures WBS_Node_WBS_rlt_PRE2 == 100;
  //@ ensures Nor_Pressure == 0;
  //@ ensures Alt_Pressure == 0;
  //@ ensures Sys_Mode == 0;
  public WBS() {
    WBS_Node_WBS_BSCU_SystemModeSelCmd_rlt_PRE = 0;
    WBS_Node_WBS_BSCU_rlt_PRE1 = 0;
    WBS_Node_WBS_rlt_PRE2 = 100;
    Nor_Pressure = 0;
    Alt_Pressure = 0;
    Sys_Mode = 0;
  }

  //@ requires 0 <= PedalPos && PedalPos <= 4;
  //@ ensures Nor_Pressure == \old(Nor_Pressure);
  //@ ensures Alt_Pressure == \old(Alt_Pressure);
  //@ ensures Sys_Mode == 1 <==> WBS_Node_WBS_BSCU_SystemModeSelCmd_Logical_Operator6;
  public void update(int PedalPos, boolean AutoBrake, boolean Skid) {
    // method body
  }
}
/home/max/Documents/JMLGPT/tmp/WBS.java:11: error: An identifier with private visibility may not be used in a ensures clause with public visibility
  //@ ensures WBS_Node_WBS_BSCU_SystemModeSelCmd_rlt_PRE == 0;
              ^
/home/max/Documents/JMLGPT/tmp/WBS.java:12: error: An identifier with private visibility may not be used in a ensures clause with public visibility
  //@ ensures WBS_Node_WBS_BSCU_rlt_PRE1 == 0;
              ^
/home/max/Documents/JMLGPT/tmp/WBS.java:13: error: An identifier with private visibility may not be used in a ensures clause with public visibility
  //@ ensures WBS_Node_WBS_rlt_PRE2 == 100;
              ^
/home/max/Documents/JMLGPT/tmp/WBS.java:29: error: cannot find symbol
  //@ ensures Sys_Mode == 1 <==> WBS_Node_WBS_BSCU_SystemModeSelCmd_Logical_Operator6;
                                 ^
  symbol:   variable WBS_Node_WBS_BSCU_SystemModeSelCmd_Logical_Operator6
  location: class WBS
4 errors

